<?xml version="1.0"?>
<package>
  <name>sar_robot_command_sender</name>
  <version>1.0.0</version>
  <description>Sends a generic robot command to a SAR robot</description>

  <maintainer email="jakory@media.mit.edu">jakory</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/personal-robots/sar_robot_command_sender</url>
  <author email="jakory@media.mit.edu">jakory</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
